@@ -72,9 +72,11 @@ admin.help.serverurl=The base URL for the server, such as http\://www.example.co
 admin.help.sitename=The name of the site.  This value will be appended to all page titles and used in XML exports.  Note that HTML should not be used in the site name.
 admin.maintenance.caption.links=Regenerate topic metadata records
 admin.maintenance.caption.namespaces=Fix incorrect topic namspaces
+admin.maintenance.error.metadata=Metadata for {0} topics could not be updated.  See the logs for error messages.
 admin.maintenance.error.namespacefail=Failure while fixing incorrect topic namespaces.  The error message is\: {0}.
 admin.maintenance.help.links=Regenerate the metadata records for all topics, including categories, "link to" and search index information.  It should only be necessary to run this task after manually updating the database.  <b>This task requires re-parsing and updating all wiki topics and may be extremely slow</b>.
 admin.maintenance.help.namespaces=<b>Advanced users only</b>\: Verify that topic records point to the correct namespace.  This functionality should not generally be needed, but may resolve namespace problems after adding or updating new namespaces, or if the JAMWiki database is changed outside of normal wiki processes.  <b>This function updates every existing topic record and may take a long time to complete.</b>
+admin.maintenance.message.metadata=Metadata for {0} topics has been updated.
 admin.maintenance.message.topicsUpdated={0} topics have been updated.
 admin.maintenance.title=Maintenance
 admin.maintenance.title.data=Data Utilities
@@ -293,6 +295,7 @@ common.delete=Delete
 common.exception.name=The requested value "{0}" was invalid. It may contain one or more characters which cannot be used in titles.
 common.exception.notopic=Invalid or missing topic name.
 common.exception.novirtualwiki=Invalid or missing virtual wiki.
+common.exception.expression=Expression error: {0}
 common.exception.pseudotopic={0} is a special topic that cannot be viewed or edited as a normal topic.
 common.exception.recaptcha=The CAPTCHA challenge words did not match the expected results.  Please enter the words pictured below.
 common.interval.days=Days
@@ -359,6 +362,7 @@ edit.button.unordered.list.text=Bulleted list item
 edit.caption.antispam=Anti-spam check. Do <b>NOT</b> fill this in!
 edit.caption.comment=Edit Comment
 edit.caption.minor=Minor Edit
+edit.caption.previewsummary=Preview of edit summary: ({0})
 edit.caption.watch=Add to Watchlist
 edit.exception.conflict=WARNING\: Someone else has edited this topic.  The current version of the topic is show in the first box below, and your version is shown in the second box below.  Please manually resolve any differences and re-save.
 edit.exception.nocontent=The topic {0} has no content.
