@@ -1,0 +1,4 @@
+<p>1. 2000</p>
+<p>2. 2000</p>
+<p>3. -0.00023</p>
+<p>4. 2</p>
