@@ -44,6 +44,14 @@
 	<prerequisites>
 		<maven>${maven.version}</maven>
 	</prerequisites>
+	<repositories>
+		<repository>
+			<id>congrace.de</id>
+			<name>releases</name>
+			<url>http://nexus.congrace.de/nexus/content/repositories/releases/</url>
+			<layout>default</layout>
+		</repository>
+	</repositories>
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
@@ -90,6 +98,11 @@
 				<groupId>commons-io</groupId>
 				<artifactId>commons-io</artifactId>
 				<version>2.0</version>
+			</dependency>
+			<dependency>
+				<groupId>de.congrace</groupId>
+				<artifactId>exp4j</artifactId>
+				<version>0.2.8</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.commons</groupId>
