@@ -10,6 +10,8 @@ New Features:
     images, table of contents, and other elements.
   * Add support for the Mediawiki {{padleft:}} and {{padright:}} parser
     functions.  Usage: "{{padleft:string|amt|padString}}".
+  * Enhance the #expr parser function to better match Mediawiki by supporting
+    the order of operations and functions such as "round" and "trunc".
   * {{REVISIONMONTH}} is no longer padded ("4" instead of "04") while
     {{REVISIONMONTH1}} has been added in order to match Mediawiki behavior.
   * Allow page name and namespace magic words to specify the page to be
